feat(sky-offer): Keycloak auth, DB-side search, pagination, event-store integrity
- Keycloak JWT resource-server (public reads stay open, owner CRUD authenticated);
  identity from JWT email claim; CORS centralized; virtual threads enabled.
- searchOffers pushed into a repository LIKE query (was a full-table in-memory scan).
- Pageable on offers/owner-offers list endpoints; V2 owner_email index +
  offer_event (offer_id, sequence_number) unique constraint.
- @Data entities -> id-based equals/hashCode; create returns 201; tests renamed +
  @DisplayName; idiom/logging/Gson cleanup; dead printHeaders removed.